Fix import paths

--- a/example.local.conf
+++ b/example.local.conf
@@ -1,5 +1,5 @@
 postgres {
-	url = ""
-	username = ""
-	password = ""
+    url = "jdbc:postgresql://localhost:5432/lighting"
+    username = "lighting"
+    password = ""
 }
