--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,6 @@ ktor {
 		port = 8080
 	}
 	application {
-		modules = [ uk.me.cormack.ApplicationKt.module ]
+		modules = [ uk.me.cormack.lighting7.ApplicationKt.module ]
 	}
 }
