Move database and show into State.

--- a/example.local.conf
+++ b/example.local.conf
@@ -5,5 +5,10 @@ postgres {
 }
 
 lighting {
-    project = "Halloween"
+    projectName = "Halloween"
+    runLoop {
+        enabled = false
+        scriptName = "runloop"
+        delayMs = 500
+    }
 }
