--- a/example.local.conf
+++ b/example.local.conf
@@ -11,4 +11,6 @@ lighting {
         scriptName = "runloop"
         delayMs = 500
     }
+    loadFixturesScriptName = "loadFixtures"
+    initialSceneScriptName = "initialScene"
 }
