Refactor to register fixtures in scripts with type safe method to access.

--- a/example.local.conf
+++ b/example.local.conf
@@ -11,6 +11,6 @@ lighting {
         scriptName = "runloop"
         delayMs = 500
     }
-    loadFixturesScriptName = "loadFixtures"
-    initialSceneScriptName = "initialScene"
+    loadFixturesScriptName = "load-fixtures"
+    initialSceneScriptName = "initial-scene"
 }
