Add socket API for supplying universes.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,3 +6,13 @@ ktor {
 		modules = [ uk.me.cormack.lighting7.ApplicationKt.module ]
 	}
 }
+
+lighting {
+	runLoop {
+		enabled = false
+		scriptName = "runloop"
+		delayMs = 500
+	}
+	loadFixturesScriptName = "load-fixtures"
+	initialSceneScriptName = "initial-scene"
+}
