Add scenes based on scripts.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,5 +14,5 @@ lighting {
 		delayMs = 500
 	}
 	loadFixturesScriptName = "load-fixtures"
-	initialSceneScriptName = "initial-scene"
+	initialSceneName = "Initial"
 }
