Add support for scene settings, remove no longer needed annotations and add missing fixture definitions. Update dependencies.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,5 +14,6 @@ lighting {
 		delayMs = 500
 	}
 	loadFixturesScriptName = "load-fixtures"
+	defaultStateScriptName = "default-state"
 	initialSceneName = "Initial"
 }
