Add slide change tracking.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -15,4 +15,5 @@ lighting {
 	}
 	loadFixturesScriptName = "load-fixtures"
 	initialSceneName = "Initial"
+	trackChangedScriptName = "track-changed"
 }
